# funC

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
include/: arraytp.h  coordin.h  josephus.h  main.h  matrix.h  mycollection.h  mylist.h  mytime0.h  mytime1.h  myvector.h  queue.h  queuetp.h  sales.h  stack.h  stacktp.h  stock2.h  string1.h  stringbad.h  student.h  student2.h  tv.h  vect.h
src/: CMakeLists.txt  coordin.cpp  josephus.cpp  mytime0.cpp  mytime1.cpp  queue.cpp  stack.cpp  stock2.cpp  string1.cpp  stringbad.cpp  student.cpp  tv.cpp  vect.cpp
